Jwt working with in memory user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=OAuth2ResourceServer
+
+jwtSigningkey = 92087b09-25be-421e-99cf-e375c70fc478415aa29c-fa6e-4b37-87a8-f0ca87ddc3d9
