--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.application.name=OAuth2ResourceServer
 
 jwtSigningkey = 92087b09-25be-421e-99cf-e375c70fc478415aa29c-fa6e-4b37-87a8-f0ca87ddc3d9
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/springsecurity
+spring.datasource.username=postgres
+spring.datasource.password=auspicious04
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.output.ansi.enabled=always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
